# xproj103

./: .gitignore_global  Makefile  Makefile.in  README.md  config.h  config.h.in~  config.status  configure  configure.ac  xproj103.kdev4
.kdev4/: xproj103.kdev4
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
src/: .server.c.kate-swp  Makefile  Makefile.am  Makefile.am~  Makefile.in  client  client.c  main.c  main.c~  server  server.c  test  test.sh  xproj103  xproj103.h  xproj103.h~
src/.deps/: main.Po  main.Tpo
